--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development"
   },
   "dependencies": {
+    "ant-design-vue": "^4.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -18,8 +19,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "vue-cli-plugin-chrome-extension-cli": "~1.1.4"
   },
   "eslintConfig": {
