--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^4.0.0",
     "core-js": "^3.8.3",
+    "prettier": "^3.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -20,9 +21,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-vue": "^8.7.1",
-    "vue-cli-plugin-chrome-extension-cli": "~1.1.4"
+    "vue-cli-plugin-chrome-extension-cli": "~1.1.4",
+    "vue-eslint-parser": "^9.3.1"
   },
   "eslintConfig": {
     "root": true,
