--- a/src/manifest.development.json
+++ b/src/manifest.development.json
@@ -3,6 +3,10 @@
     "name": "example",
     "description": "example",
     "version": "0.0.1",
+    "permissions": [
+        "activeTab",
+        "scripting"
+    ],
     "background": {
         "service_worker": "/background.js"
     },
@@ -19,5 +23,13 @@
             ]
         }
     ],
-    "options_page": "options.html"
+    "options_page": "options.html",
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Ctrl+B",
+                "mac": "Command+B"
+            }
+        }
+    }
 }
