scraping in background

--- a/src/manifest.development.json
+++ b/src/manifest.development.json
@@ -5,7 +5,8 @@
     "version": "0.0.1",
     "permissions": [
         "activeTab",
-        "scripting"
+        "scripting",
+        "storage"
     ],
     "background": {
         "service_worker": "/background.js"
